--- a/Sudoku.css
+++ b/Sudoku.css
@@ -1,4 +1,4 @@
-input {
+table tr td input {
   width: 35px;
   height: 35px;
   font-size: 35px;
@@ -33,4 +33,28 @@ input {
  border: 1px silver dashed;
  border-right: 1px black solid;
  border-bottom: 1px black solid;
+}
+
+div {
+    height:25px;
+    width:50px;
+    border: #6495ED;
+    background-color:gray;
+    border-radius:5px;
+    margin-bottom:10;
+    margin-right:10;
+    text-align:center
+}
+
+input {
+  width: 35px;
+  height: 35px;
+  font-size: 35px;
+  border: none;
+  text-align: center;
+}
+
+.start{
+	color:yellow;
+	background-color:gray;
 }
